# rust_api

./: .env  Cargo.toml  Readme.md  diesel.toml
migrations/: 20241128101513_contents.sql
migrations/2024-11-25-162817_create_contents/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/handler/: h_list.rs
src/handlers/: handle_list.rs  mod.rs
src/models/: content.rs  m_content.rs  mod.rs
src/receiver/: r_list.rs
src/utility/: db.rs  router.rs  stor.rs
