[package]
name = "rust_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.3.0"
chrono = { version = "0.4.23", features = ["serde"] }
dotenvy = "0.15.0"
env_logger = "0.11.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.8", features = ["runtime-async-std", "tls-native-tls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }